--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "importHelpers": true,
+    "target": "es2015",
+    "module": "commonjs",
     "lib": [
-      "dom",
+      "DOM",
       "ES2015"
     ],
-    "module": "CommonJS",
     "baseUrl": ".",
-    "outDir": "build",
+    "outDir": "./build",
     "rootDir": ".",
     "strict": true,
     "noImplicitAny": true,
@@ -18,12 +16,12 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
-    "alwaysStrict": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "pretty": true,
+    "resolveJsonModule": true,
     "plugins": [
       {
         "transform": "typescript-transform-paths"
@@ -34,15 +32,51 @@
       }
     ],
     "paths": {
+      "~user/*": [
+        "src/features/user/*"
+      ],
+      "~auth/*": [
+        "src/features/auth/*"
+      ],
+      "~reaction/*": [
+        "src/features/reaction/*"
+      ],
+      "~nofitication/*": [
+        "src/features/nofitication/*"
+      ],
+      "~follower/*": [
+        "src/features/follower/*"
+      ],
+      "~image/*": [
+        "src/features/image/*"
+      ],
+      "~chat/*": [
+        "src/features/chat/*"
+      ],
+      "~post/*": [
+        "src/features/post/*"
+      ],
+      "~comment/*": [
+        "src/features/comment/*"
+      ],
+      "~global/*": [
+        "src/shared/globals/*"
+      ],
+      "~services/*": [
+        "src/shared/services/*"
+      ],
+      "~sockets/*": [
+        "src/shared/sockets/*"
+      ],
+      "~workers/*": [
+        "src/shared/workers/*"
+      ],
+      "~mocks/*": [
+        "src/mocks/*"
+      ],
       "~/*": [
         "src/*"
       ]
     }
-  },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  }
 }
