--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,47 +32,23 @@
       }
     ],
     "paths": {
-      "~user/*": [
-        "src/features/user/*"
-      ],
       "~auth/*": [
         "src/features/auth/*"
       ],
-      "~reaction/*": [
-        "src/features/reaction/*"
+      "~savingPlan/*": [
+        "src/features/savingPlan/*"
       ],
-      "~nofitication/*": [
-        "src/features/nofitication/*"
+      "~userSaving/*": [
+        "src/features/userSaving/*"
       ],
-      "~follower/*": [
-        "src/features/follower/*"
-      ],
-      "~image/*": [
-        "src/features/image/*"
-      ],
-      "~chat/*": [
-        "src/features/chat/*"
-      ],
-      "~post/*": [
-        "src/features/post/*"
-      ],
-      "~comment/*": [
-        "src/features/comment/*"
+      "~transaction/*": [
+        "src/features/transaction/*"
       ],
       "~global/*": [
         "src/shared/globals/*"
       ],
       "~services/*": [
         "src/shared/services/*"
-      ],
-      "~sockets/*": [
-        "src/shared/sockets/*"
-      ],
-      "~workers/*": [
-        "src/shared/workers/*"
-      ],
-      "~mocks/*": [
-        "src/mocks/*"
       ],
       "~/*": [
         "src/*"
