--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "http-status-codes": "^2.3.0",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.45",
     "mysql2": "^3.9.3",
     "pino-pretty": "^11.0.0",
     "sequelize": "^6.37.2",
