--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "compression": "^1.7.4",
     "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -40,6 +41,7 @@
     "moment-timezone": "^0.5.45",
     "mysql2": "^3.9.3",
     "pino-pretty": "^11.0.0",
+    "react-toastify": "^10.0.5",
     "sequelize": "^6.37.2",
     "typescript": "^5.4.3",
     "typescript-transform-paths": "^3.4.7",
